--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -46,5 +46,5 @@
         </div>
     </div>
 </div>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.17.1/axios.min.js"></script>
 <script src="/assets/js/login.js"></script>
